[package]
name = "packed-uints"
version = "0.1.4"
edition = "2021"
description = "Array of uints that scales from u4 to u32 to minimize wasted space while still being fast"
license = "Unlicense"
repository = "https://github.com/Inspirateur/packed-uints"
keywords = ["array", "uint", "small", "dense", "packed"]

[dev-dependencies]
unthbuf = "1.0"
criterion = { version = "0.5" }
rand = "0.8"

[[bench]]
name = "control_vec"
harness = false

[[bench]]
name = "packed_uints"
harness = false

[[bench]]
name = "unthbuf"
harness = false
